syntax = "proto3";

package ibcgo.core.types.v1;

option go_package = "github.com/cosmos/ibc-go/core/types";

import "gogoproto/gogo.proto";
import "ibcgo/core/client/v1/genesis.proto";
import "ibcgo/core/connection/v1/genesis.proto";
import "ibcgo/core/channel/v1/genesis.proto";

// GenesisState defines the ibc module's genesis state.
message GenesisState {
  // ICS002 - Clients genesis state
  ibcgo.core.client.v1.GenesisState client_genesis = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"client_genesis\""
  ];
  // ICS003 - Connections genesis state
  ibcgo.core.connection.v1.GenesisState connection_genesis = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"connection_genesis\""
  ];
  // ICS004 - Channel genesis state
  ibcgo.core.channel.v1.GenesisState channel_genesis = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"channel_genesis\""
  ];
}
